added selecting and moving functionalities

--- a/assets/index.html
+++ b/assets/index.html
@@ -27,18 +27,25 @@
     <h1>HTW DD Building Locator</h1>
     <div class="column" id="map" style="width: 50%"></div>
     <div class="column" id="controls">
-      <textarea id="input">POLYGON((0 0, 100 0, 100 30, 80 30, 80 15, 0 15, 0 0))</textarea>
+      <textarea id="input">POLYGON((0 0, 300 0, 300 90, 240 90, 240 45, 0 45, 0 0))</textarea>
       <button id="drawWKT">WKT zeichnen</button>
       <button id="savePosition">save Position</button>
       <textarea id="output">result</textarea>
       <div id="myPosition"></div>
       <fieldset>
         <input type="radio" id="rd-3857" name="Projection" checked="checked" value="3857"> <label for="rd-3857">EPSG: 3857 (Web-Mercator)</label><br>
-        <input type="radio" id="rd-4326" name="Projection" value="4326"> <label for="rd-4326">EPSG: 4326 (WGS84 Geogr.)</label><br>
+        <input type="radio" id="rd-4326" name="Projection" value="4326"> <label for="rd-4326">EPSG: 4326 (WGS84 LatLon)</label><br>
         <input type="radio" id="rd-25832" name="Projection" value="25832"> <label for="rd-25832" value="25832">EPSG: 25832 (UTM Zone 32N)</label><br>
         <input type="radio" id="rd-25833" name="Projection" value="25833"> <label for="rd-25833" value="25833">EPSG: 25833 (UTM Zone 33N)</label><br>
       </fieldset>
+      <fieldset>
+        <input type="radio" id="move" name="EditControl" value="move" checked="checked"> <label for="none"> verschieben</label> <br>
+        <input type="radio" id="rotate" name="EditControl" value="rotate"> <label for="none"> drehen</label> <br>
+      </fieldset>
+      <button id="delete" >Auswahl löschen</div>
+      <div id="status"></div>
     </div>
     <script src="js/bundle.js"></script>
+    <script src="bla/index.js"></script>
   </body>
 </html>
