--- a/assets/index.html
+++ b/assets/index.html
@@ -22,6 +22,7 @@
         clear: both;
       }
     </style>
+    <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
   </head>
   <body>
     <h1>HTW DD Building Locator</h1>
@@ -44,8 +45,11 @@
       </fieldset>
       <button id="delete" >Auswahl löschen</div>
       <div id="status"></div>
+      <fieldset>
+        <div id="dropZone">Drop JSON-File here</div>
+        <output id="list"></output>
+      </fieldset>
     </div>
     <script src="js/bundle.js"></script>
-    <script src="bla/index.js"></script>
   </body>
 </html>
