implemented JSON-Download and removed items from index.html

--- a/assets/index.html
+++ b/assets/index.html
@@ -32,7 +32,6 @@
       <button id="drawWKT">WKT zeichnen</button>
       <button id="savePosition">save Position</button>
       <textarea id="output">result</textarea>
-      <div id="myPosition"></div>
       <fieldset>
         <input type="radio" id="rd-3857" name="Projection" checked="checked" value="3857"> <label for="rd-3857">EPSG: 3857 (Web-Mercator)</label><br>
         <input type="radio" id="rd-4326" name="Projection" value="4326"> <label for="rd-4326">EPSG: 4326 (WGS84 LatLon)</label><br>
@@ -43,8 +42,12 @@
         <input type="radio" id="move" name="EditControl" value="move" checked="checked"> <label for="none"> verschieben</label> <br>
         <input type="radio" id="rotate" name="EditControl" value="rotate"> <label for="none"> drehen</label> <br>
       </fieldset>
-      <button id="delete" >Auswahl löschen</div>
-      <div id="status"></div>
+      <fieldset>
+        <button id="delete" >Auswahl löschen</button>
+        <button id="saveFile">JSON-Datei herunterladen</button>
+        <div id="status"></div>
+        <div id="myPosition"></div>
+      </fieldset>
       <fieldset>
         <div id="dropZone">Drop JSON-File here</div>
         <output id="list"></output>
