implemented loading existing georef50

--- a/assets/index.html
+++ b/assets/index.html
@@ -60,24 +60,32 @@
           <td>
             <textarea id="country"></textarea>
           </td>
+          <td>Level50 Status</td>
+          <td id="level50Status"></td>
         </tr>
         <tr>
           <td>Region</td>
           <td>
             <textarea id="region"></textarea>
           </td>
+          <td>Eastings</td>
+          <td id="eastings"></td>
         </tr>
         <tr>
           <td>Stadt</td>
           <td>
             <textarea id="city"></textarea>
           </td>
+          <td>Northings</td>
+          <td id="northings"></td>
         </tr>
         <tr>
           <td>PLZ</td>
           <td>
             <textarea id="postCode"></textarea>
           </td>
+          <td>RotationXY</td>
+          <td id="rotation50"></td>
         </tr>
         <tr>
           <td>Straße</td>
