changed from dragNdrop to input-dialog

--- a/assets/index.html
+++ b/assets/index.html
@@ -51,7 +51,7 @@
         <div id="myPosition"></div>
       </fieldset>
       <fieldset>
-        <div id="dropZone">Drop JSON-File here</div>
+        <input type="file" id="files">
         <output id="list"></output>
       </fieldset>
       <table>
