dirty hack for Zoom to Extent function

--- a/assets/index.html
+++ b/assets/index.html
@@ -47,6 +47,7 @@
         <button id="delete" >Auswahl löschen</button>
         <button id="getAddress">Adresse ermitteln</button>
         <button id="saveFile">JSON-Datei herunterladen</button>
+        <button id="extent">Ber Extent</button>
         <div id="status"></div>
         <div id="myPosition"></div>
       </fieldset>
