--- a/assets/index.html
+++ b/assets/index.html
@@ -1,107 +1,106 @@
+<!doctype html>
 <html>
   <head>
     <title>Building Locator</title>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+
     <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      /*Create two equal columns that float next to each other */
-      .column {
-        float: left;
-        width: 50%;
-        padding: 10px;
-        height: 80%;
-      }
-
-      /*Clear floats after the columns */
-      .row::after {
-        content: "";
-        display: table;
-        clear: both;
-      }
     </style>
     <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
   </head>
   <body>
-    <h1>HTW DD Building Locator</h1>
-    <div class="column" id="map" style="width: 50%"></div>
-    <div class="column" id="controls">
-      <textarea id="input">POLYGON((0 0, 300 0, 300 90, 240 90, 240 45, 0 45, 0 0))</textarea>
-      <button id="drawWKT">WKT zeichnen</button>
-      <button id="savePosition">save Position</button>
-      <textarea id="output">result</textarea>
-      <div id="basePointWGS84">ProjektBasisPunkt in WGS 84: </div>
-      <fieldset>
-        <input type="radio" id="rd-3857" name="Projection"  value="3857"> <label for="rd-3857">EPSG: 3857 (Web-Mercator)</label><br>
-        <input type="radio" id="rd-4326" name="Projection" value="4326"> <label for="rd-4326">EPSG: 4326 (WGS84 LatLon)</label><br>
-        <input type="radio" id="rd-25832" name="Projection" value="25832"> <label for="rd-25832" value="25832">EPSG: 25832 (UTM Zone 32N)</label><br>
-        <input type="radio" id="rd-25833" name="Projection" value="25833" checked="checked"> <label for="rd-25833" value="25833">EPSG: 25833 (UTM Zone 33N)</label><br>
-      </fieldset>
-      <fieldset>
-        <input type="radio" id="move" name="EditControl" value="move" checked="checked"> <label for="none"> verschieben</label> <br>
-        <input type="radio" id="rotate" name="EditControl" value="rotate"> <label for="none"> drehen</label> <br>
-      </fieldset>
-      <fieldset>
-        <button id="delete" >Auswahl löschen</button>
-        <button id="getAddress">Adresse ermitteln</button>
-        <button id="saveFile">JSON-Datei herunterladen</button>
-        <button id="extent">Ber Extent</button>
-        <div id="status"></div>
-        <div id="myPosition"></div>
-      </fieldset>
-      <fieldset>
-        <input type="file" id="files">
-        <output id="list"></output>
-      </fieldset>
-      <table>
-        <tr>
-          <td>Land</td>
-          <td>
-            <textarea id="country"></textarea>
-          </td>
-          <td>Level50 Status</td>
-          <td id="level50Status"></td>
-        </tr>
-        <tr>
-          <td>Region</td>
-          <td>
-            <textarea id="region"></textarea>
-          </td>
-          <td>Eastings</td>
-          <td id="eastings"></td>
-        </tr>
-        <tr>
-          <td>Stadt</td>
-          <td>
-            <textarea id="city"></textarea>
-          </td>
-          <td>Northings</td>
-          <td id="northings"></td>
-        </tr>
-        <tr>
-          <td>PLZ</td>
-          <td>
-            <textarea id="postCode"></textarea>
-          </td>
-          <td>RotationXY</td>
-          <td id="rotation50"></td>
-        </tr>
-        <tr>
-          <td>Straße</td>
-          <td>
-            <textarea id="road"></textarea>
-          </td>
-        </tr>
-        <tr>
-          <td>Hausnummer</td>
-          <td>
-            <textarea	id="houseNumber"></textarea>
-          </td>
-        </tr>
-      </table>
+    <div class="containter-fluid">
+      <h1>HTW DD Building Locator</h1>
+      <div class="row">
+      <div class="col-md-6" id="map"></div>
+      <div class="col-md-6" id="controls">
+        <textarea id="input">POLYGON((0 0, 300 0, 300 90, 240 90, 240 45, 0 45, 0 0))</textarea>
+        <button id="drawWKT">WKT zeichnen</button>
+        <button id="savePosition">save Position</button>
+        <textarea id="output">result</textarea>
+        <div id="basePointWGS84">ProjektBasisPunkt in WGS 84: </div>
+        <fieldset>
+          <input type="radio" id="rd-3857" name="Projection"  value="3857"> <label for="rd-3857">EPSG: 3857 (Web-Mercator)</label><br>
+          <input type="radio" id="rd-4326" name="Projection" value="4326"> <label for="rd-4326">EPSG: 4326 (WGS84 LatLon)</label><br>
+          <input type="radio" id="rd-25832" name="Projection" value="25832"> <label for="rd-25832" value="25832">EPSG: 25832 (UTM Zone 32N)</label><br>
+          <input type="radio" id="rd-25833" name="Projection" value="25833" checked="checked"> <label for="rd-25833" value="25833">EPSG: 25833 (UTM Zone 33N)</label><br>
+        </fieldset>
+        <fieldset>
+          <input type="radio" id="move" name="EditControl" value="move" checked="checked"> <label for="none"> verschieben</label> <br>
+          <input type="radio" id="rotate" name="EditControl" value="rotate"> <label for="none"> drehen</label> <br>
+        </fieldset>
+        <fieldset>
+          <button id="delete" >Auswahl löschen</button>
+          <button id="getAddress">Adresse ermitteln</button>
+          <button id="saveFile">JSON-Datei herunterladen</button>
+          <button id="extent">Ber Extent</button>
+          <div id="status"></div>
+          <div id="myPosition"></div>
+        </fieldset>
+        <fieldset>
+          <input type="file" id="files">
+          <output id="list"></output>
+        </fieldset>
+        <table>
+          <tr>
+            <td>Land</td>
+            <td>
+              <textarea id="country"></textarea>
+            </td>
+            <td>Level50 Status</td>
+            <td id="level50Status"></td>
+          </tr>
+          <tr>
+            <td>Region</td>
+            <td>
+              <textarea id="region"></textarea>
+            </td>
+            <td>Eastings</td>
+            <td id="eastings"></td>
+          </tr>
+          <tr>
+            <td>Stadt</td>
+            <td>
+              <textarea id="city"></textarea>
+            </td>
+            <td>Northings</td>
+            <td id="northings"></td>
+          </tr>
+          <tr>
+            <td>PLZ</td>
+            <td>
+              <textarea id="postCode"></textarea>
+            </td>
+            <td>RotationXY</td>
+            <td id="rotation50"></td>
+          </tr>
+          <tr>
+            <td>Straße</td>
+            <td>
+              <textarea id="road"></textarea>
+            </td>
+          </tr>
+          <tr>
+            <td>Hausnummer</td>
+            <td>
+              <textarea	id="houseNumber"></textarea>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
     </div>
     <script src="js/bundle.js"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
