commit before sync

--- a/assets/index.html
+++ b/assets/index.html
@@ -34,8 +34,9 @@
         </div>
         <div class="col-md-6" id="controls">
           
-          <div>
-            <input type="file" id="files">
+          <div class="custom-file">
+            <input type="file" id="files" class="custom-file-input">
+            <label class="custom-file-label" for="files">Choose File</label>
             <output id="list"></output>
           <div>
           
