showing mouse coordinates

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,10 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+    <!--<link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">-->
     <style>
     </style>
-    <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
+    <!--<link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">-->
   </head>
   <body class="h-100">
     <div class="containter-fluid h-100">
@@ -30,8 +30,9 @@
             <div class="btn btn-secondary" id="delete">delete</div>
             <div class="btn btn-secondary" id="zoomToFeature">Zoom to Feature</div>
           </div>
-          <div id="myPosition"></div>
+          <!--<div id="myPosition"></div>-->
         </div>
+        <div id="myPosition"></div>
         <div class="col-md-6" id="controls">
           <h1>HTW Dresden Building Locator</h1>
           <div id="accordion">
@@ -291,6 +292,7 @@
               </div>
             </div>-->
           </div>
+          
         </div>
       </div>
     </div>
