--- a/assets/index.html
+++ b/assets/index.html
@@ -271,7 +271,7 @@
               </div>
               <div id="ca-save" class="collapse" aria-labelledby="ca-save-header" data-parent="#accordion">
                 <div class="card-body">
-                  <button type="button" class="btn btn-primary" id="savePosition">Save Settings to File</button>
+                  <button type="button" class="btn btn-primary" id="savePosition">Save Settings</button>
                   <button type="button" class="btn btn-warning" id="saveFile">Download JSON-File</button>
                 </div>
               </div>
