display of lvl10 modified

--- a/assets/index.html
+++ b/assets/index.html
@@ -91,9 +91,7 @@
                     <div class="tab-content" id="myTabContent">
                       <div class="tab-pane fade show active" id="lv10" role="tabpanel" aria-labelledby="lv10-tab">
                         <div class="form-group row">
-                          <label for="level10Status" readonly class="col-sm-2 col-form-label">Level 10 Status for IfcBuilding</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control-plaintext" id="level10Status">
+                          <div id="lvl10">
                           </div>
                         </div>
                       </div>
