--- a/assets/index.html
+++ b/assets/index.html
@@ -49,7 +49,7 @@
 
               <div id="ca-file" class="collapse show" aria-labelledby="ca-file-header" data-parent="#accordion">
                 <div class="card-body">
-                  
+                  <p class="alert alert-warning" role="alert">Please open exported JSON-File from GeoRefChecker! </p>
                   <div class="custom-file">
                     <input type="file" id="files" class="custom-file-input">
                     <label class="custom-file-label" for="files">Choose File</label>
@@ -170,6 +170,7 @@
                         <option value="25832">EPSG: 25832 (UTM Zone 32N)</option>
                         <option value="4326">EPSG: 4326 (WGS84 LatLon)</option>
                         <option value="3857">EPSG: 3857 (Web-Mercator)</option>
+                        <!--<option value="31467">EPSG: 31467 (GK-Zone3)</option>-->
                       </select>
                     </div>
                     <div class="form-check">
@@ -182,28 +183,35 @@
                             <div class="form-row">
                               <div class="form-group col-md-6">
                                 <label for="wmsUrl">WMS-URL</label>
-                                <input type="text" class="form-control" id="wmsUrl" placeholder="https://www.wms.nrw.de/geobasis/wms_nw_dop?">
+                                <input type="text" class="form-control" id="wmsUrl" value="https://www.wms.nrw.de/geobasis/wms_nw_dop?">
                               </div>
                               <div class="form-group col-md-6">
                                 <label for="wmsLayer">Layer</label>
-                                <input type="text" class="form-control" id="wmsLayer" placeholder="WMS_NW_DOP">
+                                <!--<input type="text" class="form-control" id="wmsLayer" value="nw_dop_cir">-->
+                                <select class="custom-select" id="layerSelect">
+                                  <option selected value="none">Select Layer</option>
+                                </select>
                               </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-md-6">
-                                  <label for="epsgCode">EPSG-Code</label>
-                                  <input type="text" class="form-control" id="epsgCode" placeholder="EPSG-Code">
+                                  <label for="epsgCode">CRS</label>
+                                  <!--<input type="text" class="form-control" id="epsgCode" value="31467">-->
+                                  <select class="custom-select" id="CRSSelect">
+                                      <option selected value="none">Select CRS</option>
+                                    </select>
                                 </div>
                                 <div class="form-group col-md-6">
                                   <label for="projDef">Proj4 Definition String</label>
-                                  <input type="text" class="form-control" id="projDef" placeholder="proj4 Definition">
+                                  <input type="text" class="form-control" id="projDef" value="+proj=tmerc +lat_0=0 +lon_0=9 +k=1 +x_0=3500000 +y_0=0 +ellps=bessel +towgs84=598.1,73.7,418.2,0.202,0.045,-2.455,6.7 +units=m +no_defs ">
                                 </div>
                               </div>
                           </fieldset>       
                         </form>
                         <div class="row">
                             <div class="col-sm-10">
-                              <button  class="btn btn-primary" id="loadWMS" disabled="true">Load Custom WMS</button>
+                              <button  class="btn btn-primary" id="addWMS" disabled="true">Save Custom WMS Settings</button>
+                              <button  class="btn btn-primary" id="queryCap" disabled="true">Query Capabilities</button>
                             </div>
                         </div>
                       </div>
@@ -251,6 +259,7 @@
               </div>
               <div id="ca-adr" class="collapse" aria-labelledby="ca-adr-header" data-parent="#accordion">
                 <div class="card-body">
+                  <p class="alert alert-warning" role="alert">The building address refers to the orange marked dot of the building footprint </p>
                   <form>
                     <div class="form-row">
                       <div class="form-group col-md-6">
@@ -304,6 +313,9 @@
               </div>
               <div id="ca-save" class="collapse" aria-labelledby="ca-save-header" data-parent="#accordion">
                 <div class="card-body">
+                  <p class="alert alert-warning" role="alert"> If you have specified all settings correctly and placed the building appropriate save your settings first.
+                      Then download the JSON-File and import it in the GeoRefChecker application for updating the corresponding IFC-File
+                  </p>
                   <button type="button" class="btn btn-primary" id="savePosition">Save Settings</button>
                   <button type="button" class="btn btn-warning" id="saveFile">Download JSON-File</button>
                 </div>
