alpha version of customWMS

--- a/assets/index.html
+++ b/assets/index.html
@@ -183,7 +183,7 @@
                             <div class="form-row">
                               <div class="form-group col-md-6">
                                 <label for="wmsUrl">WMS-URL</label>
-                                <input type="text" class="form-control" id="wmsUrl" value="https://www.wms.nrw.de/geobasis/wms_nw_dop?">
+                                <input type="text" class="form-control" id="wmsUrl" value="http://www.geoproxy.geoportal-th.de/geoproxy/services/DOP?">
                               </div>
                               <div class="form-group col-md-6">
                                 <label for="wmsLayer">Layer</label>
