--- a/assets/index.html
+++ b/assets/index.html
@@ -49,7 +49,7 @@
 
               <div id="ca-file" class="collapse show" aria-labelledby="ca-file-header" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="alert alert-warning" role="alert">Please open exported JSON-File from GeoRefChecker! </p>
+                  <p class="alert alert-warning" role="alert">Please open the exported JSON-File from GeoRefChecker! </p>
                   <div class="custom-file">
                     <input type="file" id="files" class="custom-file-input">
                     <label class="custom-file-label" for="files">Choose File</label>
