--- a/assets/index.html
+++ b/assets/index.html
@@ -205,7 +205,13 @@
                                   <label for="projDef">Proj4 Definition String</label>
                                   <input type="text" class="form-control" id="projDef" value="+proj=tmerc +lat_0=0 +lon_0=9 +k=1 +x_0=3500000 +y_0=0 +ellps=bessel +towgs84=598.1,73.7,418.2,0.202,0.045,-2.455,6.7 +units=m +no_defs ">
                                 </div>
-                              </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <input type="checkbox" class="form-check-input" id="axisOrder">
+                                    <label class="form-check-label" for="axisOrder">Change Axis Order</label>
+                                </div>
+                            </div>
                           </fieldset>       
                         </form>
                         <div class="row">
