add former commit to electron app

--- a/BuildingLocatorAsElectron/index.html
+++ b/BuildingLocatorAsElectron/index.html
@@ -51,13 +51,12 @@
                 <div class="card-body">
                   <p class="alert alert-warning" role="alert">Please open the exported JSON-File from GeoRefChecker! </p>
                   <div class="custom-file">
-                    <input type="file" id="files" class="custom-file-input">
+                    <input type="file" id="files" class="custom-file-input" accept=".json, application/json">
                     <label class="custom-file-label" for="files">Choose File</label>
                     <output id="list"></output>
                   </div>
                 </div>
               </div>
-
             </div>
 
             <!--Show File Content-->
